wrong background color on light theme fix

--- a/vallek-github.user.css
+++ b/vallek-github.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Github Compact
 @namespace      github.com/openstyles/stylus
-@version        1.3.4
+@version        1.3.5
 @description    Github Compact style + distinctive tabs
 @author         Vallek
 ==/UserStyle== */
@@ -73,7 +73,8 @@
         border-radius: 5px 5px 0 0;
     }
     .UnderlineNav-item.selected {
-        background: var(--ghd-bg-color, var(--color-canvas-default)) var(--ghd-bg-img) !important;
+        background-color: var(--ghd-bg-color, var(--color-canvas-default)) !important;
+        background-image: var(--ghd-bg-img) !important;
     }
     .UnderlineNav-item.selected::after {
         background: var(--underlineNav-borderColor-active, var(--ghd-bg-color, var(--color-canvas-default))) !important;
